--- a/index.html
+++ b/index.html
@@ -18,6 +18,53 @@
         <div class="loader hidden">
             <img src="rocket.svg" alt="Rocket Loading Animation" />
         </div>
+        <!-- Container -->
+        <div class="container">
+            <!-- Navigation -->
+            <div class="navigation-container">
+                <span class="background"></span>
+                <!-- Results Nav -->
+                <span class="navigation-items" id="results-nav">
+                    <h3 class="clickable">Favorites</h3>
+                    <h3>&nbsp;&nbsp;&nbsp;·&nbsp;&nbsp;&nbsp;</h3>
+                    <h3 class="clickable">Load More</h3>
+                </span>
+                <!-- Favorites Nav -->
+                <span class="navigation-items hidden" id="favorites-nav">
+                    <h3 class="clickable">Load More NASA Images</h3>
+                </span>
+            </div>
+            <!-- Images Container -->
+            <div class="images-container">
+                <div class="card">
+                    <a href="" title="View Full Image" target="_blank">
+                        <img
+                            src="https://apod.nasa.gov/apod/image/2106/ZhurongRover_CNSA_1920.jpg"
+                            alt="NASA Picture of the Day"
+                            class="card-img-top"
+                        />
+                    </a>
+                    <div class="card-body">
+                        <h5 class="card-title">Title of Image</h5>
+                        <p class="clickable">Add to Favorites</p>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
+                            doloribus fugiat omnis reprehenderit nihil. Voluptatum deserunt
+                            asperiores delectus earum adipisci, perferendis beatae omnis dignissimos
+                            obcaecati? Molestiae distinctio exercitationem enim dicta?
+                        </p>
+                        <small class="text-muted">
+                            <strong>12-20-2020</strong>
+                            <span>Copyright Info</span>
+                        </small>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Save Confirmation -->
+        <div class="save-confirmed" hidden>
+            <h1>ADDED!</h1>
+        </div>
         <!-- Script -->
         <script src="script.js"></script>
     </body>
