--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>NASA API Pictures</title>
+        <title>NASA APOD</title>
         <link rel="stylesheet" href="style.css" />
         <link
             rel="icon"
             type="image/png"
             href="https://s2.googleusercontent.com/s2/favicons?domain=www.nasa.gov"
         />
-        <!-- ZTM Favicon -->
+        <!-- Default Favicon -->
         <!-- <link rel="icon" type="image/png" href="favicon.png"> -->
     </head>
     <body>
@@ -25,13 +25,13 @@
                 <span class="background"></span>
                 <!-- Results Nav -->
                 <span class="navigation-items" id="results-nav">
-                    <h3 class="clickable">Favorites</h3>
-                    <h3>&nbsp;&nbsp;&nbsp;·&nbsp;&nbsp;&nbsp;</h3>
-                    <h3 class="clickable">Load More</h3>
+                    <h3 class="clickable" onclick="updateDOM('favorites')">Favorites</h3>
+                    <h3>&nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;</h3>
+                    <h3 class="clickable" onclick="getNasaPictures()">Load More</h3>
                 </span>
                 <!-- Favorites Nav -->
                 <span class="navigation-items hidden" id="favorites-nav">
-                    <h3 class="clickable">Load More NASA Images</h3>
+                    <h3 class="clickable" onclick="getNasaPictures()">Load More NASA Images</h3>
                 </span>
             </div>
             <!-- Images Container -->
